# colorful

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp  main_cm.cpp  main_ct.cpp
src/include/: color_mapping.hpp  color_terminal.hpp  colorful.hpp
